# iot_library_source

./: README.md
cgilib-0.7/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aux%.c  aux%.h  cgi.5  cgi.c  cgi.h  cgiDebug.3  cgiEscape.3  cgiFree.3  cgiFreeList.3  cgiGetCookie.3  cgiGetCookies.3  cgiGetFile.3  cgiGetFiles.3  cgiGetValue.3  cgiGetVariables.3  cgiHeader.3  cgiInit.3  cgiRedirect.3  cgiSetHeader.3  cgiSetType.3  cgitest.c  configure  configure.ac  cookies.c  cookies.txt  jumpto.c
gesthiper_c/: Makefile  README.md  main.c
gesthiper_c/libs/: avl.c  avl.h  clientes.c  clientes.h  compras.c  compras.h  contabilidade.c  contabilidade.h  produtos.c  produtos.h
libgcgi/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap  config.h.in  configure  configure.in
libgcgi/debian/: changelog  control  copyright  libgcgi-dev.install  libgcgi0.install  libgcgi0.lintian-overrides  rules  source.lintian-overrides  watch
libgcgi/debian/patches/: 00list  01_update_libtool.dpatch
libgcgi/doc/: Makefile.am  Makefile.in  cookie_spec.html  gcgi.html
libgcgi/examples/: Makefile.am  Makefile.in  cookietest.html  file-upload-example-unix.txt  file-upload-example-windows.txt  fileupload.html  formexample.html  gcgi-env  gcgiCookieTest.c  gcgiFileUploadTest.c  gcgitest.c  getinput.c  mime-data-2parts  mime-data-gif-big  mime-data-png  mime-data-png-big  mimedata2  urlencodedenv  urlencodedquery
libgcgi/src/: Makefile.am  Makefile.in  code.c  common.c  common.h  crlfstringbuf.c  crlfstringbuf.h  crypt.c  crypt.h  gcgi.c  gcgi.h  gcgi_private.h  mime.c  mime.h  parse.c  parse.h
linux-pam/modules/pam_faillock/: faillock.h
